compiler/testData/checkerWithErrorTypes/quick/backingField/ReadNonexistentCustomGetInAnotherInitializer.jet
class CustomValNoBackingField() {
    val a: Int
        get() = 1
    
    val b = <!NO_BACKING_FIELD!>$a<!>
}
